# iDeLUCS

./: .gitignore  CNN.diff  DeLUCS_GUI.py  GUI_iDeLUCS.py  LICENCE.md  README.md  Unsupervised.py  Voting_DeLUCS.py  breeze_resources.py  iDeLUCS.py  monitoring.py  pyproject.toml  requirements.txt  setup.py  test_fcgr_rep.py
.github/workflows/: python-package.yml  python-publish.yml
Example/: ALL_RESULTS.tsv  Actinopterygii.fas  Actinopterygii_GT.tsv  Cyprinidae_GT.tsv  Cypriniformes_GT.tsv  Dengue_GT.tsv  Example.ipynb  GT.tsv  HBV_GT.tsv  Influenza-A.fas  Influenza-A_GT.tsv  Neopterygii_GT.tsv  Ostariophysi_GT.tsv  Vertebrata_GT.tsv
GUI/: GUI_iDeLUCS.py
iDeLUCS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
idelucs/: PytorchUtils.py  ResNet.py  __init__.py  __main__.py  cluster.py  kmers.c  kmers.pyx  kmers_non_cython.py  models.py  utils.py  utils_GUI.py
kernels/: kernel4.npz  kernel5.npz  kernel6.npz
src/: DeLUCS.py  LossFunctions.py  PytorchUtils.py  ResNet.py  Supervised.py  models.py  requirements.txt  utils.py  utils_GUI.py
src/.ipynb_checkpoints/: EvaluateUnsupervised-checkpoint.py  LossFunctions-checkpoint.py  PytorchUtils-checkpoint.py  c_utils-checkpoint.pyx  models-checkpoint.py  reverse_kernels-checkpoint.py  utils-checkpoint.py
tests/: test_import.py
