[project]
name = "idelucs"
dynamic = ["version"]
dependencies = [
    "numpy==1.23.0",
    "torch==1.13.1",
    "cython",
    "matplotlib==3.6.1",
    "pandas==1.5.3",
    "scikit-learn==1.1.2",
    "scipy==1.10.1", 
    "umap-learn==0.5.3",
    "tensorflow==2.13.0rc0",
    "protobuf==3.20.3",
    "tfrecord==1.14.3",
    "hdbscan==0.8.28",
    "joblib==1.1.0"
]
requires-python = "<3.12,>=3.9.0"
scripts = {idelucs = "idelucs.__main__:main"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[metadata]
authors = [
    {name="Pablo Millan Arias", email="pmillanan@uwaterloo.ca"}
]
url = "https://github.com/Kari-Genomics-Lab/iDeLUCS"
description = "An interactive deep-learning based tool for clustering of genomic sequences"
license = "MIT"
[tool.setuptools.dynamic]
version = {attr = "idelucs.__version__"}
readme = {file = "README.md"}

[build-system]
requires = ["setuptools", "wheel", "Cython",
    "numpy==1.23.0",
    "torch==1.13.1",
    "cython==0.29.34",
    "matplotlib==3.6.1",
    "pandas==1.5.3",
    "scikit-learn==1.1.2",
    "scipy==1.10.1", 
    "umap-learn==0.5.3",
    "tensorflow==2.13.0rc0",
    "protobuf==3.20.3",
    "tfrecord==1.14.3",
    "hdbscan==0.8.28",
    "joblib==1.1.0"]
build-backend = "setuptools.build_meta"


