[project]
name = "idelucs"
dynamic = ["version"]
dependencies = [
    "numpy==1.24.2",
    "torch==2.0",
    "cython",
    "matplotlib==3.7",
    "pandas==2.0.0",
    "scikit-learn==1.2.1",
    "scipy==1.10.1", 
    "umap-learn==0.5.3",
    "hdbscan==0.8.32"
]
requires-python = "<3.12,>=3.9.0"
scripts = {idelucs = "idelucs.__main__:main"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[metadata]
authors = [
    {name="Pablo Millan Arias", email="pmillanan@uwaterloo.ca"}
]
url = "https://github.com/Kari-Genomics-Lab/iDeLUCS"
description = "Deep-learning based tool for clustering genomic sequences"
license = "MIT"
[tool.setuptools.dynamic]
version = {attr = "idelucs.__version__"}
readme = {file = "README.md"}

[build-system]
requires = ["setuptools", "wheel", "Cython", 
    "numpy==1.24.2",
    "torch==2.0",
    "cython",
    "matplotlib==3.7",
    "pandas==2.0.0",
    "scikit-learn==1.2.1",
    "scipy==1.10.1", 
    "umap-learn==0.5.3",
    "hdbscan==0.8.32"]
build-backend = "setuptools.build_meta"
